# road-mapping

./: .gitignore  .gitlab-ci.yml  README.md  README.rst  app.py  requirements.txt  setup.cfg  setup.py  tox.ini
graph_generator/: graphviz_gen.py
road_mapping/: app.py  const.py  graph_generator.py  model.py  model_loader.py
road_mapping/image_generator/: graphviz_gen.py
road_mapping/output/: tmp.gv
src/road_mapping/: app.py  graph_generator.py  log.py  model.py  model_loader.py
src/road_mapping/graph_generator/: graphviz_gen.py
src/road_mapping/model_loader/: xlsx_loader.py
tests/: test_graph_generator_graphviz.py  test_integrated.py  test_model.py  test_model_loader_xlsx_loader.py
tests/data/: testdata_unnormalized_hierarchy_defined_by_data_groups.xlsx  testdata_unnormalized_hierarchy_defined_by_link_to_parent.xlsx  testdata_unnormalized_simple.xlsx
