[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 3.4
testpaths = README.rst road_mapping tests
addopts =
  --doctest-modules --doctest-glob='*.rst' 
  --cov --cov-report=term --cov-report=html
mock_use_standalone_module = true

[coverage:run]
source = road_mapping
branch = false